<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_calculator"
        android:title="@string/nav_calculator" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
</menu>
